--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* body {
+    @apply bg-black text-slate-100;
+} */
+
+@layer base {
+  :root {
+
+        --radius: 0.5rem
+    }
+}
